# encodeck

./: .gitignore  LICENSE  README.md  manage.py  pyproject.toml
cryptography/: forms.py  models.py  urls.py  views.py
cryptography/algorithms/: aes.py
encodeck/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html  footer.html  nav.html
templates/cryptography/: dashboard.html  decrypter.html  encrypter.html  index.html
templates/users/: login.html  signup.html
users/: models.py  urls.py  views.py
